# OpenGL-Injector

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md  app_config.cfg
awesome/: README.md  run.sh
awesome/config/admin/: rc.lua  xinitrc
awesome/config/console/: rc.lua  xinitrc
cmake/: FindLua.cmake
hub/: CMakeLists.txt
hub/qml/: BodyText.qml  Overlay.qml
hub/src/: OverlayWrapper.cpp  main.cpp
include/overlay/: Notification.hpp
injector/: CMakeLists.txt  configure_cairo.sh  configure_pixman.sh
injector/injectors/: CMakeLists.txt  config.h.in  fontconfig_wrapper.c  fontconfig_wrapper.h  injector_helpers.h  injectors.c  injectors.h  lua_utils.c  lua_utils.h  xkb_parser.c  xkb_parser.h
injector/injectors/opengl/: CMakeLists.txt  opengl.c  opengl.h  shaders.c  shaders.h
injector/injectors/x11/: CMakeLists.txt  x_events.c  x_events.h  x_handling.c  x_handling.h
injector/injectors/xkbcomp/: CMakeLists.txt  atom.h  context-priv.c  context.c  context.h  parser.c  parser.h
injector/lua/: config.lua  keyboard.lua  options.lua  overlay.lua  settings.lua
injector/lua/ffi/: cairo.lua  kbd.lua  overlay.lua  x11.lua
injector/lua/shaders/: overlay.frag  overlay.vert
overlay/: CMakeLists.txt  app_config.cfg  overlay.qrc
overlay/include/overlay/: Overlay.hpp
overlay/include/piga/overlay/: Applications.hpp  Config.hpp.in  OverlayPlugin.hpp  OverlayWrapper.hpp
overlay/qml/: HeaderBar.qml  LimitedAreaText.qml  Overlay.qml
overlay/ressources/: overlay.qml
overlay/ressources/shared/: Author.qml  NotificationItem.qml
overlay/src/: Applications.cpp  Overlay.cpp  OverlayPlugin.cpp  OverlayWrapper.cpp
qwm/: CMakeLists.txt  qwm.pro
qwm/qml/: Chrome.qml  Keyboard.qml  Screen.qml  main.qml
qwm/src/: main.cpp
ressources/: overlay.qml  ressources
ressources/shared/: Card.qml  CardDrawer.qml  CardDrawer.qmlc.J15269  HeaderBar.qml  HeaderText.qml  Settings.qml
src/: Notification.cpp  main.cpp
xwm/: CMakeLists.txt  README.md  run.sh  xinitrc
xwm/include/piga/xwm/: Config.hpp.in  Util.hpp  WindowManager.hpp
xwm/src/: Util.cpp  WindowManager.cpp  main.cpp
